<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsv_dog_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/n02106030_11024"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dog_name"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dog_name"
                style="@style/TextInputLayout.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start|bottom"
                android:hint="Name of the dog" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dog_description"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_dog_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dog_description"
                style="@style/TextInputLayout.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start|bottom"
                android:hint="Description of the dog" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dog_age"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_dog_description">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dog_age"
                style="@style/TextInputLayout.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start|bottom"
                android:hint="Age of the dog" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dog_found_date"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_dog_age">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dog_found_date"
                style="@style/TextInputLayout.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start|bottom"
                android:hint="Date when dog has been found"
                android:focusableInTouchMode="false"/>

        </android.support.design.widget.TextInputLayout>

        <!-- TODO: style these buttons so that they are raised button. Follow the material guidelines! -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_validation_dog_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="Save the dog"
            app:layout_constraintStart_toEndOf="@+id/button_cancel_dog_creation"
            app:layout_constraintTop_toBottomOf="@+id/til_dog_found_date" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel_dog_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_validation_dog_creation" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>